--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@ body.exam-on .calc{
   .root small{font-size:.7em;vertical-align:super;margin-right:.05em}  
   .root.small .rad{border-top-width:1.6px}  
   .caret{display:inline-block;width:.7ch;text-align:center;animation:blink 1s step-end infinite;font-weight:700}  
+.root .rad.empty {
+  display: inline-block;
+  height: 0.2em;          /* malá výška, aby šla čára nahoru */
+  width: 0.9em;           /* délka čárky */
+  border-top: 1px solid currentColor; /* čára nahoře */
+  vertical-align: top;    /* posune čárku nahoru */
+  position: relative;
+  top: -0.25em;           /* jemné dorovnání pod střechu odmocniny */
+}
+
+
   @keyframes blink{50%{opacity:0}} sup{font-size:.7em}  
    
   
@@ -237,17 +248,13 @@ body.exam-on .calc{
       <button class="key fn" id="btnInv"><span class="legend">x!</span><span class="main">x⁻¹</span></button>
       <button class="key fn" id="btnComb"><span class="legend">nPr</span><span class="main">nCr</span></button>
       <button class="key fn" id="btnPolRec"><span class="legend">Rec(</span><span class="legend alpha">:</span><span class="main">Pol(</span></button>
-      <button class="key fn" id="btnPow3"><span class="legend"><span class="root small"><small>3</small>√<span class="rad">x</span></span></span><span class="main">x³</span></button>
+      <button class="key fn" id="btnPow3"><span class="legend"><span class="root small"><small>3</small>√<span class="rad empty"></span></span></span><span class="main">x³</span></button>
 
       <button class="key fn" id="btnFracKey"><span class="legend">d/c</span><span class="main">a b/c</span></button>
       <button class="key fn" id="btnSqrt"><span class="main"><span class="root">√<span class="rad">x</span></span></span></button>
       <button class="key fn" id="btnPow2"><span class="main">x²</span></button>
-            <button class="key fn" id="btnPow">
-        <span class="legend">
-          <span class="root small"><small>ˣ</small><span class="rad">x</span></span>
-        </span>
-        <span class="main">^</span>
-      </button>
+<button class="key fn" id="btnPow"><span class="legend"><span class="root small">ˣ√<span class="rad empty"></span></span></span><span class="main">^</span></button>
+
 
       <button class="key fn" data-fn="log"><span class="legend">10ˣ</span><span class="main">log</span></button>
     <button class="key fn" data-fn="ln"><span class="legend">eˣ</span><span class="legend alpha">e</span><span class="main">ln</span></button>
@@ -2076,6 +2083,8 @@ s = s.replace(/(\d+(?:\.\d+)?)(\s*)π/g, '$1*$2π');
 // --- EXP se závorkou: 5E(-3) -> 5*10^(-3)
 s = s.replace(/(\d+(?:\.\d+)?)[Ee]\(/g, '$1*10^(');
 
+// --- y-root: číslo těsně před root( → index odmocniny
+s = s.replace(/(\d+(?:\.\d+)?)(\s*)root\(/g, 'root($1,');
 
 // teprve teď mezery pryč
 s = s.replace(/\s+/g,'');
