--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ body.exam-on .calc{
       <button class="key fn" id="btnPow3"><span class="legend"><span class="root small"><small>3</small>√<span class="rad empty"></span></span></span><span class="main">x³</span></button>
 
       <button class="key fn" id="btnFracKey"><span class="legend">d/c</span><span class="main">a b/c</span></button>
-      <button class="key fn" id="btnSqrt"><span class="main"><span class="root">√<span class="rad">x</span></span></span></button>
+      <button class="key fn" id="btnSqrt"><span class="main"><span class="root">√<span class="rad empty"></span></span></span></button>
       <button class="key fn" id="btnPow2"><span class="main">x²</span></button>
 <button class="key fn" id="btnPow"><span class="legend"><span class="root small">ˣ√<span class="rad empty"></span></span></span><span class="main">^</span></button>
 
@@ -3360,4 +3360,5 @@ function endExamScan(){   QR.start('END'); }
 </script>
 </body>
 </html>
+
 
